make buildout work for plone 3

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,18 +1,32 @@
 [buildout]
-extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
-
-parts +=
-    test
-    coverage
-    report
-    report-xml
-
+parts = zope2 instance
+extends = versions.cfg
 package-name = collective.cookiecuttr
 package-extras = [test]
+versions = versions
+develop = .
+#parts +=
+#    test
+#    coverage
+#    report
+#    report-xml
 
-[versions]
-zc.buildout = 1.6.3
+
+[zope2]
+recipe = plone.recipe.zope2install
+url = ${versions:zope2-url}
+
+[instance]
+recipe = plone.recipe.zope2instance
+zope2-location = ${zope2:location}
+user = admin:admin
+eggs =
+    Plone
+    Pillow
+    Products.LinguaPlone
+    plone.reload
+    collective.cookiecuttr
+zcml = plone.reload
 
 [coverage]
 recipe = zc.recipe.egg
@@ -40,6 +54,6 @@ recipe = collective.xmltestreport
 defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
 eggs =
     Plone
-    plone.app.upgrade
-    ${buildout:package-name} ${buildout:package-extras}
-    ${buildout:test-eggs}
+#    plone.app.upgrade
+#    ${buildout:package-name} ${buildout:package-extras}
+#    ${buildout:test-eggs}
