--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,59 +1,17 @@
 [buildout]
-parts = zope2 instance
-extends = versions.cfg
+extends =
+    http://svn.plone.org/svn/collective/buildout/plonetest/test-3.x.cfg
 package-name = collective.cookiecuttr
-package-extras = [test]
+# need to convert the tests to PloneTestCase for Plone 3
+#package-extras = [test]
 versions = versions
 develop = .
-#parts +=
-#    test
-#    coverage
-#    report
-#    report-xml
-
-
-[zope2]
-recipe = plone.recipe.zope2install
-url = ${versions:zope2-url}
 
 [instance]
-recipe = plone.recipe.zope2instance
-zope2-location = ${zope2:location}
-user = admin:admin
-eggs =
-    Plone
+eggs +=
+    collective.cookiecuttr
     Pillow
     Products.LinguaPlone
-    plone.reload
-    collective.cookiecuttr
-zcml = plone.reload
 
-[coverage]
-recipe = zc.recipe.egg
-eggs = coverage
-initialization =
-    include = '--source=${buildout:directory}/src'
-    sys.argv = sys.argv[:] + ['run', include, 'bin/test', '--all']#
-
-[report]
-recipe = zc.recipe.egg
-eggs = coverage
-scripts = coverage=report
-initialization =
-    sys.argv = sys.argv[:] + ['html', '-i']
-
-[report-xml]
-recipe = zc.recipe.egg
-eggs = coverage
-scripts = coverage=report-xml
-initialization =
-    sys.argv = sys.argv[:] + ['xml', '-i']
-
-[test]
-recipe = collective.xmltestreport
-defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
-eggs =
-    Plone
-#    plone.app.upgrade
-#    ${buildout:package-name} ${buildout:package-extras}
-#    ${buildout:test-eggs}
+[versions]
+Pillow = 1.7.8
