update translations, add script for managing translations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,11 +7,23 @@ package-name = collective.cookiecuttr
 versions = versions
 develop = .
 
+#parts +=
+#    i18ndude
+
 [instance]
 eggs +=
     collective.cookiecuttr
     Pillow
     Products.LinguaPlone
 
+[i18ndude]
+recipe = zc.recipe.egg
+eggs = i18ndude
+
 [versions]
 Pillow = 1.7.8
+# needed for i18ndude
+#i18ndude = 3.1
+#zope.tal = 3.5.2
+#zope.i18nmessageid = 3.6.1
+#zope.interface = 3.8.0
